Black to purple theme, navbar changed
by ChatGPT

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Teerawee Sukanchanon</h1>
-        <p>Hello I'm the one and only one of all Teerawees</p>
+    <header style="background-color: #af8da2;">
+        <h1>Your Name</h1>
+        <p>Welcome to My Personal Website</p>
     </header>
 
     <nav>
-        <ul>
+        <ul class="navbar">
             <li><a href="#about">About Me</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -37,8 +37,8 @@
         </section>
     </div>
 
-    <footer>
-        &copy; 2023 Teerawee Sukanchanon
+    <footer style="background-color: #af8da2; color: #fff;">
+        &copy; 2023 Your Name
     </footer>
 </body>
 </html>
