--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Your Name - Personal Website</title>
+    <title>Teerawee - Personal Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <header style="background-color: #af8da2;">
-        <h1>Your Name</h1>
-        <p>Welcome to My Personal Website</p>
+        <h1>Teerawee Sukanchanon</h1>
+        <p>Ciao! I'm just one of the teerawees.</p>
     </header>
 
     <nav>
         <ul class="navbar">
             <li><a href="#about">About Me</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#portfolio">About My Cat</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -23,22 +23,27 @@
     <div class="container">
         <section id="about">
             <h2>About Me</h2>
-            <p>Write a brief introduction about yourself here.</p>
+            <p>I'm a teerawee and I have two kitties.</p>
         </section>
 
         <section id="portfolio">
-            <h2>Portfolio</h2>
-            <!-- Add your portfolio items or projects here -->
+            <h2>About My Cat</h2>
+            <p>Well, one is a cow and another one is a complaining machine.</p>
+            <div class="image-container">
+                <img src="images/cow.jpg" alt="a cow">
+                <img src="images/complaining-machine.jpg" alt="a comlaining machine">
+            </div>
         </section>
 
         <section id="contact">
             <h2>Contact</h2>
             <!-- Add your contact information and a contact form here -->
+            <p>Just say meow i guess.</p>
         </section>
     </div>
 
     <footer style="background-color: #af8da2; color: #fff;">
-        &copy; 2023 Your Name
+        &copy; 2023 Teerawee Sukanchanon
     </footer>
 </body>
 </html>
