--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     </nav>
 
     <div class="container">
-        <section id="about">
-            <h2>About Me</h2>
+        <section id="about" class="section">
+            <h2 class="centered-heading">About Me</h2>
             <p>I'm a teerawee and I have two kitties.</p>
         </section>
 
-        <section id="portfolio">
-            <h2>About My Cat</h2>
+        <section id="portfolio" class="section">
+            <h2 class="centered-heading">About My Cat</h2>
             <p>Well, one is a cow and another one is a complaining machine.</p>
             <div class="image-container">
                 <img src="images/cow.jpg" alt="a cow">
@@ -35,8 +35,8 @@
             </div>
         </section>
 
-        <section id="contact">
-            <h2>Contact</h2>
+        <section id="contact" class="section">
+            <h2 class="centered-heading">Contact</h2>
             <!-- Add your contact information and a contact form here -->
             <p>Just say meow i guess.</p>
         </section>
