--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <h2 class="centered-heading">About My Cat</h2>
             <p>Well, one is a cow and another one is a complaining machine.</p>
             <div class="image-container">
-                <img src="images/cow.jpg" alt="a cow">
-                <img src="images/complaining-machine.jpg" alt="a comlaining machine">
+                <img src="images/cow.jpg" alt="a cow" class="fixed-size-image">
+                <img src="images/complaining-machine.jpg" alt="a comlaining machine" class="fixed-size-image">
             </div>
         </section>
 
