--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section id="portfolio" class="section">
             <h2 class="centered-heading">About My Cat</h2>
             <p>Well, one is a cow and another one is a complaining machine.</p>
-            <div class="image-container aspect-ratio-4-3">
+            <div class="image-container">
                 <img src="images/cow.jpg" alt="a cow" class="centered-cropped-image">
                 <img src="images/complaining-machine.jpg" alt="a comlaining machine" class="centered-cropped-image">
             </div>
