--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <header style="background-color: #af8da2;">
+    <header>
         <h1>Teerawee Sukanchanon</h1>
         <p>Ciao! I'm just one of the teerawees.</p>
     </header>
@@ -42,7 +42,7 @@
         </section>
     </div>
 
-    <footer style="background-color: #af8da2; color: #fff;">
+    <footer>
         &copy; 2023 Teerawee Sukanchanon
     </footer>
 </body>
