--- a/index.html
+++ b/index.html
@@ -1,49 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Teerawee - Personal Website</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Bilingual Website</title>
 </head>
 <body>
-    <header>
-        <h1>Teerawee Sukanchanon</h1>
-        <p>Ciao! I'm just one of the teerawees.</p>
-    </header>
-
-    <nav>
-        <ul class="navbar">
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#portfolio">About My Cat</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-
-    <div class="container">
-        <section id="about" class="section">
-            <h2 class="centered-heading">About Me</h2>
-            <p>I'm a teerawee and I have two kitties.</p>
-        </section>
-
-        <section id="portfolio" class="section">
-            <h2 class="centered-heading">About My Cat</h2>
-            <p>Well, one is a cow and another one is a complaining machine.</p>
-            <div class="image-container">
-                <img src="images/cow.jpg" alt="a cow" class="centered-cropped-image">
-                <img src="images/complaining-machine.jpg" alt="a comlaining machine" class="centered-cropped-image">
-            </div>
-        </section>
-
-        <section id="contact" class="section">
-            <h2 class="centered-heading">Contact</h2>
-            <!-- Add your contact information and a contact form here -->
-            <p>Just say meow i guess.</p>
-        </section>
-    </div>
-
-    <footer>
-        &copy; 2023 Teerawee Sukanchanon
-    </footer>
+    <script>
+        // Redirect to the default language (English) when landing on the website
+        window.location.href = "index-en.html";
+    </script>
 </body>
 </html>
