--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bilingual Website</title>
+    <title>Teerawee's personal page</title>
 </head>
 <body>
     <script>
