--- a/index-en.html
+++ b/index-en.html
@@ -12,18 +12,18 @@
 </head>
 <body>
     <header>
-        <button id="switchToItalian" class="language-switch logo-button">
+        <!-- <button id="switchToItalian" class="language-switch logo-button">
             <img src="images/italy.png">
-        </button>
+        </button> -->
 
         <h1>Teerawee Sukanchanon</h1>
-        <p>Ciao! I'm just one of the teerawees.</p>
+        <p>Hi! Welcome to my website.</p>
     </header>
 
     <nav>
         <ul class="navbar">
             <li><a href="#about">About Me</a></li>
-            <li><a href="#portfolio">About My Cat</a></li>
+            <li><a href="#portfolio">About My Cats</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -31,27 +31,30 @@
     <div class="container">
         <section id="about" class="section">
             <h2 class="centered-heading">About Me</h2>
-            <p>I'm a teerawee and I have two kitties.</p>
+            <p>Hi! My name is Teerawee Sukanchanon [tiː.ɾa.wiː su.kan.ɕʰaː.non]. I am from Thailand where people usually go by their nickname 
+                so I guess I should also tell you my nickname. It's "Knot" (a Thai pronunciation would be [nɔt̚]).
+                </p>
         </section>
 
         <section id="portfolio" class="section">
-            <h2 class="centered-heading">About My Cat</h2>
-            <p>Well, one is a cow and the other is a complaining machine.</p>
+            <h2 class="centered-heading">About My Cats</h2>
+            <p>I have two kitties. Their names are Kluaykhai and Kluayhom ("Kluay" means banana in Thai, and their names are just types of
+                bananas. LOL). However, people don't usually call Kluaykhai Kluaykhai but instead call him a cow (You can probably guess
+                which one is him from the pictures.)</p>
             <div class="image-container">
                 <img src="images/cow.jpg" alt="a cow" class="centered-cropped-image">
-                <img src="images/complaining-machine.jpg" alt="a comlaining machine" class="centered-cropped-image">
+                <img src="images/complaining-machine.jpg" alt="a sheep" class="centered-cropped-image">
             </div>
         </section>
 
         <section id="contact" class="section">
             <h2 class="centered-heading">Contact</h2>
-            <!-- Add your contact information and a contact form here -->
-            <p>Just say meow and i'll appear in front of you.</p>
+            <p>Under construction</p>
         </section>
     </div>
 
     <footer>
-        &copy; 2023 Teerawee Sukanchanon
+        &copy; 2024 Teerawee Sukanchanon
     </footer>
 
     <script src="script.js"></script>
