--- a/index-it.html
+++ b/index-it.html
@@ -22,7 +22,7 @@
     <nav>
         <ul class="navbar">
             <li><a href="#about">Su di Me</a></li>
-            <li><a href="#portfolio">Su dei Gatti miei</a></li>
+            <li><a href="#portfolio">Su dei miei gatti</a></li>
             <li><a href="#contact">Contatto</a></li>
         </ul>
     </nav>
@@ -30,12 +30,16 @@
     <div class="container">
         <section id="about" class="section">
             <h2 class="centered-heading">Su di Me</h2>
-            <p>Sono un teerawee e ho due gatti. Che gattastrofe!</p>
+            <div class="content-container">
+                <img src="images/Knot.jpg" alt="me" class="centered-cropped-image">
+                <p>  <<< Questo è Teerawee.  </p>
+            </div>
         </section>
 
         <section id="portfolio" class="section">
-            <h2 class="centered-heading">Su dei Gatti miei</h2>
-            <p>Allora, uno è una mucca e un'altra è una macchinetta miagoliosa.</p>
+            <h2 class="centered-heading">Su di miei gatti</h2>
+            <p>Ho due gatti. Che gattastrofe! Si chiamano Kluaykhai e Kluayhom.
+                In fatto, non sono i gatti. Uno è la mucca e un'altra è la pecora.</p>
             <div class="image-container">
                 <img src="images/cow.jpg" alt="a cow" class="centered-cropped-image">
                 <img src="images/complaining-machine.jpg" alt="a comlaining machine" class="centered-cropped-image">
