--- a/index-en.html
+++ b/index-en.html
@@ -8,13 +8,14 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <!-- <button id="switchToItalian" class="language-switch logo-button">
+        <button id="switchToItalian" class="language-switch logo-button">
             <img src="images/italy.png">
-        </button> -->
+        </button>
 
         <h1>Teerawee Sukanchanon</h1>
         <p>Hi! Welcome to my website.</p>
@@ -22,34 +23,46 @@
 
     <nav>
         <ul class="navbar">
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#portfolio">About My Cats</a></li>
+            <li><a href="#aboutme">About Me</a></li>
+            <li><a href="#aboutmycats">About My Cats</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
     <div class="container">
-        <section id="about" class="section">
+        <section id="aboutme" class="section">
             <h2 class="centered-heading">About Me</h2>
-            <p>Hi! My name is Teerawee Sukanchanon [tiː.ɾa.wiː su.kan.ɕʰaː.non]. I am from Thailand where people usually go by their nickname 
-                so I guess I should also tell you my nickname. It's "Knot" (a Thai pronunciation would be [nɔt̚]).
+            <div class="content-container">
+                <img src="images/Knot.jpg" alt="me" class="centered-cropped-image">
+                <p>Hi! My name is Teerawee Sukanchanon [tiː.ɾa.wiː su.kan.ɕʰaː.non]. I am from Thailand where people usually go by their nickname. 
+                    My nickname is "Knot", pronounced in a Thai way as [nɔt̚˥]. I am a graduating BA student and a soon-to-be MA in Linguistics student at Chulalongkorn University, Bangkok, Thailand.
+                    I majored in Language and Information Technology in my BA, with a minor in Italian studies.
+                    My main research interests are speech production and speech perception, specifically in the domain of prosody. 
+                    I've been doing research primarily on the Thai language but I've always been thinking of doing cross-linguistic studies one day.
+                    The work I've done has all been experimental stuff. I really like it and I feel like I still have a whole lot to learn.
+                    I love technologies and I am fascinated by how fast the world is revolving with them. I also love singing. I actually dreamt of being a
+                    professional singer when I was in high school but I guess that path didn't choose me 😅. I also have another dream of running an animal shelter
+                    where I can just take care of all the rescued animals all day and chill 🤣.
+                    Anyway, my (realistic?) dream right now is to get a Ph.D. and work as a researcher or a professor somewhere to help guiding the students as I've been inspired
+                    by people in the field who have offered me help and support, and I really feel like I need to pay it forward.
                 </p>
+            </div>
         </section>
 
-        <section id="portfolio" class="section">
+        <section id="aboutmycats" class="section">
             <h2 class="centered-heading">About My Cats</h2>
-            <p>I have two kitties. Their names are Kluaykhai and Kluayhom ("Kluay" means banana in Thai, and their names are just types of
-                bananas. LOL). However, people don't usually call Kluaykhai Kluaykhai but instead call him a cow (You can probably guess
+            <p>I have two 9-year-old kitties who are siblings that do not look at all alike. Their names are Kluaykhai and Kluayhom ("Kluay" means banana in Thai, and their names refer to just two types of
+                bananas. LOL). However, people don't usually call Kluaykhai Kluaykhai but instead call him a cow. (You can probably guess
                 which one is him from the pictures.)</p>
             <div class="image-container">
-                <img src="images/cow.jpg" alt="a cow" class="centered-cropped-image">
-                <img src="images/complaining-machine.jpg" alt="a sheep" class="centered-cropped-image">
+                <img src="images/cow.jpg" alt="a cow">
+                <img src="images/complaining-machine.jpg" alt="a sheep">
             </div>
         </section>
 
         <section id="contact" class="section">
             <h2 class="centered-heading">Contact</h2>
-            <p>Under construction</p>
+            <p>[Under construction]</p>
         </section>
     </div>
 
