--- a/index-en.html
+++ b/index-en.html
@@ -34,7 +34,7 @@
             <h2 class="centered-heading">About Me</h2>
             <div class="content-container">
                 <img src="images/Knot.jpg" alt="me" class="centered-cropped-image">
-                <p>Hi! My name is Teerawee Sukanchanon [tiː.ɾa.wiː su.kan.ɕʰaː.non]. I am from Thailand where people usually go by their nickname. 
+                <p>Hi! My name is Teerawee Sukanchanon [tʰiː.ɾa.ˈwiː su.kan.ˈɕʰaː.non]. I am from Thailand where people usually go by their nickname. 
                     My nickname is "Knot", pronounced in a Thai way as [nɔt̚˥]. I am a graduating BA student and a soon-to-be MA in Linguistics student at Chulalongkorn University, Bangkok, Thailand.
                     I majored in Language and Information Technology in my BA, with a minor in Italian studies.
                     My main research interests are speech production and speech perception, specifically in the domain of prosody. 
